# phone-AI

./: .build-ksp.ps1  .gitignore  Aries AI 开发文档.md  CONTRIBUTING.md  README.md  build.bat  build.sh  build_debug.ps1  build_output.txt  check_crash.ps1  check_log.ps1  gradle.properties  parse_ui.ps1  parse_ui2.ps1  parse_ui3.ps1  settings.gradle.kts  ui_dump.xml
.github/workflows/: ci.yml  opencode.yml
.opencode/: opencode.json
Aries-site/: docs-center.html  index.html
Aries-site/assets/: app.js
Aries-site/docs/: BUILDING.md  FAQ.md  GIT_WORKFLOW.md  工具注册与权限管理.md  工具系统架构.md  应用内更新系统.md  截图缓存与节流.md  整体架构设计.md  简介与核心特性.md  自动化 Agent 主循环.md
Aries-site/docs/UI 组件与设计系统/: 附件组件与文件展示.md
Aries-site/docs/多模型接入/: 模型模式切换与配置链路.md
Aries-site/docs/对话系统/: 对话历史与会话管理.md
Aries-site/docs/常见问题与支持/: 虚拟屏调试提示.md
Aries-site/docs/开发规范与工具/: 反馈日志与问题排查.md
Aries-site/docs/更新与分发/: GitHub Release 集成.md
Aries-site/docs/自动化引擎/: Agent 数据模型与状态.md
Aries-site/docs/虚拟屏隔离系统/: 焦点管理与输入注入链路.md  虚拟屏完全隔离总览.md
Aries-site/scripts/: animations.js  model-marquee.js  theme.js
Aries-site/styles/: marquee.css  model-marquee.css
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/ai/phoneagent/: AriesAgentApp.kt  AutomationLiveNotification.kt  AutomationOverlay.kt  FloatingChatService.kt  LaunchProxyActivity.kt  MainActivity.kt  MainOnboardingOverlay.kt  PermissionBottomSheet.kt  PhoneAgentAccessibilityService.kt  UiAutomationAgent.kt  VirtualDisplayConfig.kt  VirtualDisplayController.kt  VirtualScreenPreviewOverlay.kt  WelcomeActivity.kt
app/src/main/java/com/ai/phoneagent/data/: AttachmentInfo.kt
app/src/main/java/com/ai/phoneagent/di/: AppModule.kt  DataModule.kt  NetworkModule.kt  UiModule.kt
app/src/main/java/com/ai/phoneagent/helper/: AutomationMessageParser.kt  AutomationTimelineFormatter.kt  FeedbackLogExporter.kt  MarkdownRenderer.kt  StreamingJsonXmlConverter.kt
app/src/main/java/com/ai/phoneagent/navigation/: AriesNavGraph.kt  Routes.kt
app/src/main/java/com/ai/phoneagent/net/: AriesApiClient.kt  AriesApiOAuthActivity.kt  AriesOidcAuthManager.kt  AutoGlmClient.kt  CasdoorOAuthActivity.kt  ChatModels.kt  DimensAuthClient.kt  ModelScopeModelDownloader.kt  OpenAICompatibleProvider.kt
app/src/main/java/com/ai/phoneagent/permissions/: ToolPermissionSystem.kt
app/src/main/java/com/ai/phoneagent/telemetry/: TelemetryHeartbeatManager.kt
app/src/main/java/com/ai/phoneagent/ui/: UIAutomationProgressOverlay.kt
app/src/main/java/com/ai/phoneagent/vdiso/: ShizukuVirtualDisplayEngine.kt  VdGlFrameDispatcher.kt
app/src/main/java/com/ai/phoneagent/viewmodel/: AboutViewModel.kt  AppearanceViewModel.kt  AutomationViewModel.kt  ChatViewModel.kt  SettingsViewModel.kt  UpdateHistoryViewModel.kt
app/src/main/res/drawable/: bg_drawer_conversation_item.xml  bg_drawer_panel.xml  ic_cognition_24.xml  ic_launcher_background.xml  ic_search_24.xml  ic_settings_24.xml  ic_tune_24.xml  palette_24.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: m3t.xml  strings.xml
app/src/main/res/values-night/: m3t.xml
app/src/test/java/com/ai/phoneagent/core/: CoreModuleTest.kt
app/src/test/java/com/ai/phoneagent/di/: KoinModuleCheckTest.kt  KoinScopeTest.kt
app/src/test/java/com/ai/phoneagent/helper/: AutomationMessageParserTest.kt
app/src/test/java/com/ai/phoneagent/net/: DimensAuthClientTest.kt  OkHttpClientTest.kt  SerializationTest.kt  SseParsingTest.kt
app/src/test/resources/sse/: error-stream.txt  normal-stream.txt  tool-call-stream.txt
core/common/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/designsystem/src/main/res/drawable/: bg_automation_toggle_button.xml  bg_circle_light.xml  bg_prerelease_chip.xml  ic_arrow_back_24.xml  ic_arrow_right.xml  ic_close_24.xml  ic_content_copy_24.xml  ic_minimize_24.xml
core/designsystem/src/main/res/values/: bools.xml  m3t.xml  themes.xml
core/designsystem/src/main/res/values-night/: bools.xml  colors.xml  m3t.xml  themes.xml
core/prompt/: build.gradle.kts
core/shizuku/: build.gradle.kts
core/shizuku/src/main/java/com/ai/phoneagent/: ShizukuBridge.kt
docs/: AI_PR_REVIEW.md  APK 下载与安装.md  BUILDING.md  CODING_STANDARDS.md  DI 依赖注入 (Koin).md  Material 3 主题系统.md  TECHNICAL_OVERVIEW.md  主对话界面 (HomeScreen).md  侧边栏与抽屉导航.md  动作执行器 (ActionExecutor).md  导航与路由系统.md  引导页 (Onboarding).md  模块组织结构.md  版本发布说明.md  许可证与社区.md  设备控制器 (DeviceController).md  配置管理 (AgentConfiguration).md
docs/AI 工具框架/: 应用包名管理.md
docs/UI 组件与设计系统/: 图标系统.md
docs/多模型接入/: 多模型接入总览.md
docs/对话系统/: 流式 Markdown 渲染.md  输入栏与语音波形.md
docs/常见问题与支持/: 故障排查指南.md
docs/开发规范与工具/: AI PR Review 流程.md  构建脚本与工具链.md
docs/快速开始/: API Key 与模型配置.md  环境与权限配置.md
docs/自动化引擎/: 动作解析器 (ActionParser).md
feature/settings/: build.gradle.kts
feature/settings/src/main/res/drawable/: ic_floating_window_24.xml  ic_history_24.xml  ic_key_24.xml  ic_license.xml  ic_mic_24.xml  ic_public_24.xml
feature/settings/src/main/res/values/: onboarding_strings.xml  strings.xml
feature/updates/: build.gradle.kts
feature/updates/src/main/res/drawable/: ic_update.xml
feature/updates/src/main/res/layout/: item_release_history.xml  item_update_link.xml
feature/updates/src/main/res/values/: history_strings.xml  strings.xml  strings_m3_fix.xml  update_strings.xml
gradle/: libs.versions.toml
telemetry-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
telemetry-worker/migrations/: 0001_init.sql
telemetry-worker/src/: index.ts
tmp/imported-docs/AI 工具框架/: 文件工具执行器.md  网络工具执行器.md
tmp/imported-docs/UI 组件与设计系统/: 设置界面体系.md
tmp/imported-docs/对话系统/: Markdown 组件体系.md  消息转录与卡片系统.md
tmp/imported-docs/开发规范与工具/: 代码规范 (CODING_STANDARDS).md
tmp/imported-docs/技术架构/: 数据流与核心链路.md
tmp/imported-docs/数据持久化/: Room 数据库 (AriesDatabase).md  会话存储与仓储.md  偏好设置仓储 (Preferences).md
xyla/: prompt.json
需求文档/: 1.项目概述与核心特性.md  2.业务功能分析.md  3.架构设计.md  4.项目目录结构与模块分析.md  5.数据模型与设计模式.md  6.远程控制模式改造设计文档.md  7-1维表处理方案.md  7-2 phone-ai 的改造方案.md  7.结合维表的架构设计.md  README.md
(+82 files in other folders)
